05-171023/inp/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI
   3           | LET REC var var EQ expr SEMISEMI
   4           | QUIT SEMISEMI

   5  expr : LET var EQ expr IN expr
   6       | LET REC var var EQ expr IN expr SEMISEMI
   7       | FUN var ARROW expr
   8       | IF expr THEN expr ELSE expr
   9       | value_expr

  10  value_expr : arith_expr
  11             | or_bool_expr

  12  or_bool_expr : or_bool_expr OR and_bool_expr
  13               | and_bool_expr

  14  and_bool_expr : and_bool_expr AND bool_expr
  15                | bool_expr

  16  bool_expr : arith_expr EQ arith_expr
  17            | arith_expr LT arith_expr
  18            | app_expr

  19  arith_expr : arith_expr PLUS factor_expr
  20             | arith_expr MINUS factor_expr
  21             | factor_expr

  22  factor_expr : factor_expr TIMES app_expr
  23              | factor_expr DIV app_expr
  24              | app_expr

  25  app_expr : app_expr atomic_expr
  26           | atomic_expr

  27  atomic_expr : INT
  28              | BOOL
  29              | ID
  30              | LPAR expr RPAR

  31  var : ID

  32  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (32)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	QUIT  shift 10
	.  error

	toplevel  goto 11
	expr  goto 12
	value_expr  goto 13
	arith_expr  goto 14
	or_bool_expr  goto 15
	and_bool_expr  goto 16
	bool_expr  goto 17
	app_expr  goto 18
	factor_expr  goto 19
	atomic_expr  goto 20


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (27)

	.  reduce 27


state 4
	atomic_expr : BOOL .  (28)

	.  reduce 28


state 5
	atomic_expr : ID .  (29)

	.  reduce 29


state 6
	toplevel : LET . var EQ expr SEMISEMI  (2)
	toplevel : LET . REC var var EQ expr SEMISEMI  (3)
	expr : LET . var EQ expr IN expr  (5)
	expr : LET . REC var var EQ expr IN expr SEMISEMI  (6)

	ID  shift 21
	REC  shift 22
	.  error

	var  goto 23


state 7
	expr : FUN . var ARROW expr  (7)

	ID  shift 21
	.  error

	var  goto 24


state 8
	expr : IF . expr THEN expr ELSE expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 26
	value_expr  goto 13
	arith_expr  goto 14
	or_bool_expr  goto 15
	and_bool_expr  goto 16
	bool_expr  goto 17
	app_expr  goto 18
	factor_expr  goto 19
	atomic_expr  goto 20


state 9
	atomic_expr : LPAR . expr RPAR  (30)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 27
	value_expr  goto 13
	arith_expr  goto 14
	or_bool_expr  goto 15
	and_bool_expr  goto 16
	bool_expr  goto 17
	app_expr  goto 18
	factor_expr  goto 19
	atomic_expr  goto 20


state 10
	toplevel : QUIT . SEMISEMI  (4)

	SEMISEMI  shift 28
	.  error


state 11
	%entry% : '\001' toplevel .  (32)

	.  reduce 32


state 12
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 29
	.  error


state 13
	expr : value_expr .  (9)

	.  reduce 9


state 14
	value_expr : arith_expr .  (10)
	bool_expr : arith_expr . EQ arith_expr  (16)
	bool_expr : arith_expr . LT arith_expr  (17)
	arith_expr : arith_expr . PLUS factor_expr  (19)
	arith_expr : arith_expr . MINUS factor_expr  (20)

	PLUS  shift 30
	MINUS  shift 31
	EQ  shift 32
	LT  shift 33
	IN  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	SEMISEMI  reduce 10


state 15
	value_expr : or_bool_expr .  (11)
	or_bool_expr : or_bool_expr . OR and_bool_expr  (12)

	OR  shift 34
	IN  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	SEMISEMI  reduce 11


state 16
	or_bool_expr : and_bool_expr .  (13)
	and_bool_expr : and_bool_expr . AND bool_expr  (14)

	AND  shift 35
	IN  reduce 13
	OR  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	SEMISEMI  reduce 13


state 17
	and_bool_expr : bool_expr .  (15)

	.  reduce 15


18: reduce/reduce conflict (reduce 18, reduce 24) on IN
18: reduce/reduce conflict (reduce 18, reduce 24) on THEN
18: reduce/reduce conflict (reduce 18, reduce 24) on ELSE
18: reduce/reduce conflict (reduce 18, reduce 24) on RPAR
18: reduce/reduce conflict (reduce 18, reduce 24) on SEMISEMI
state 18
	bool_expr : app_expr .  (18)
	factor_expr : app_expr .  (24)
	app_expr : app_expr . atomic_expr  (25)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	IN  reduce 18
	PLUS  reduce 24
	TIMES  reduce 24
	MINUS  reduce 24
	DIV  reduce 24
	EQ  reduce 24
	LT  reduce 24
	OR  reduce 18
	AND  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	RPAR  reduce 18
	SEMISEMI  reduce 18

	atomic_expr  goto 36


state 19
	arith_expr : factor_expr .  (21)
	factor_expr : factor_expr . TIMES app_expr  (22)
	factor_expr : factor_expr . DIV app_expr  (23)

	TIMES  shift 37
	DIV  shift 38
	IN  reduce 21
	PLUS  reduce 21
	MINUS  reduce 21
	EQ  reduce 21
	LT  reduce 21
	OR  reduce 21
	AND  reduce 21
	THEN  reduce 21
	ELSE  reduce 21
	RPAR  reduce 21
	SEMISEMI  reduce 21


state 20
	app_expr : atomic_expr .  (26)

	.  reduce 26


state 21
	var : ID .  (31)

	.  reduce 31


state 22
	toplevel : LET REC . var var EQ expr SEMISEMI  (3)
	expr : LET REC . var var EQ expr IN expr SEMISEMI  (6)

	ID  shift 21
	.  error

	var  goto 39


state 23
	toplevel : LET var . EQ expr SEMISEMI  (2)
	expr : LET var . EQ expr IN expr  (5)

	EQ  shift 40
	.  error


state 24
	expr : FUN var . ARROW expr  (7)

	ARROW  shift 41
	.  error


state 25
	expr : LET . var EQ expr IN expr  (5)
	expr : LET . REC var var EQ expr IN expr SEMISEMI  (6)

	ID  shift 21
	REC  shift 42
	.  error

	var  goto 43


state 26
	expr : IF expr . THEN expr ELSE expr  (8)

	THEN  shift 44
	.  error


state 27
	atomic_expr : LPAR expr . RPAR  (30)

	RPAR  shift 45
	.  error


state 28
	toplevel : QUIT SEMISEMI .  (4)

	.  reduce 4


state 29
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 30
	arith_expr : arith_expr PLUS . factor_expr  (19)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	app_expr  goto 46
	factor_expr  goto 47
	atomic_expr  goto 20


state 31
	arith_expr : arith_expr MINUS . factor_expr  (20)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	app_expr  goto 46
	factor_expr  goto 48
	atomic_expr  goto 20


state 32
	bool_expr : arith_expr EQ . arith_expr  (16)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	arith_expr  goto 49
	app_expr  goto 46
	factor_expr  goto 19
	atomic_expr  goto 20


state 33
	bool_expr : arith_expr LT . arith_expr  (17)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	arith_expr  goto 50
	app_expr  goto 46
	factor_expr  goto 19
	atomic_expr  goto 20


state 34
	or_bool_expr : or_bool_expr OR . and_bool_expr  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	arith_expr  goto 51
	and_bool_expr  goto 52
	bool_expr  goto 17
	app_expr  goto 18
	factor_expr  goto 19
	atomic_expr  goto 20


state 35
	and_bool_expr : and_bool_expr AND . bool_expr  (14)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	arith_expr  goto 51
	bool_expr  goto 53
	app_expr  goto 18
	factor_expr  goto 19
	atomic_expr  goto 20


state 36
	app_expr : app_expr atomic_expr .  (25)

	.  reduce 25


state 37
	factor_expr : factor_expr TIMES . app_expr  (22)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	app_expr  goto 54
	atomic_expr  goto 20


state 38
	factor_expr : factor_expr DIV . app_expr  (23)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	app_expr  goto 55
	atomic_expr  goto 20


state 39
	toplevel : LET REC var . var EQ expr SEMISEMI  (3)
	expr : LET REC var . var EQ expr IN expr SEMISEMI  (6)

	ID  shift 21
	.  error

	var  goto 56


state 40
	toplevel : LET var EQ . expr SEMISEMI  (2)
	expr : LET var EQ . expr IN expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 57
	value_expr  goto 13
	arith_expr  goto 14
	or_bool_expr  goto 15
	and_bool_expr  goto 16
	bool_expr  goto 17
	app_expr  goto 18
	factor_expr  goto 19
	atomic_expr  goto 20


state 41
	expr : FUN var ARROW . expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 58
	value_expr  goto 13
	arith_expr  goto 14
	or_bool_expr  goto 15
	and_bool_expr  goto 16
	bool_expr  goto 17
	app_expr  goto 18
	factor_expr  goto 19
	atomic_expr  goto 20


state 42
	expr : LET REC . var var EQ expr IN expr SEMISEMI  (6)

	ID  shift 21
	.  error

	var  goto 59


state 43
	expr : LET var . EQ expr IN expr  (5)

	EQ  shift 60
	.  error


state 44
	expr : IF expr THEN . expr ELSE expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 61
	value_expr  goto 13
	arith_expr  goto 14
	or_bool_expr  goto 15
	and_bool_expr  goto 16
	bool_expr  goto 17
	app_expr  goto 18
	factor_expr  goto 19
	atomic_expr  goto 20


state 45
	atomic_expr : LPAR expr RPAR .  (30)

	.  reduce 30


state 46
	factor_expr : app_expr .  (24)
	app_expr : app_expr . atomic_expr  (25)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	IN  reduce 24
	PLUS  reduce 24
	TIMES  reduce 24
	MINUS  reduce 24
	DIV  reduce 24
	EQ  reduce 24
	LT  reduce 24
	OR  reduce 24
	AND  reduce 24
	THEN  reduce 24
	ELSE  reduce 24
	RPAR  reduce 24
	SEMISEMI  reduce 24

	atomic_expr  goto 36


state 47
	arith_expr : arith_expr PLUS factor_expr .  (19)
	factor_expr : factor_expr . TIMES app_expr  (22)
	factor_expr : factor_expr . DIV app_expr  (23)

	TIMES  shift 37
	DIV  shift 38
	IN  reduce 19
	PLUS  reduce 19
	MINUS  reduce 19
	EQ  reduce 19
	LT  reduce 19
	OR  reduce 19
	AND  reduce 19
	THEN  reduce 19
	ELSE  reduce 19
	RPAR  reduce 19
	SEMISEMI  reduce 19


state 48
	arith_expr : arith_expr MINUS factor_expr .  (20)
	factor_expr : factor_expr . TIMES app_expr  (22)
	factor_expr : factor_expr . DIV app_expr  (23)

	TIMES  shift 37
	DIV  shift 38
	IN  reduce 20
	PLUS  reduce 20
	MINUS  reduce 20
	EQ  reduce 20
	LT  reduce 20
	OR  reduce 20
	AND  reduce 20
	THEN  reduce 20
	ELSE  reduce 20
	RPAR  reduce 20
	SEMISEMI  reduce 20


state 49
	bool_expr : arith_expr EQ arith_expr .  (16)
	arith_expr : arith_expr . PLUS factor_expr  (19)
	arith_expr : arith_expr . MINUS factor_expr  (20)

	PLUS  shift 30
	MINUS  shift 31
	IN  reduce 16
	OR  reduce 16
	AND  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	SEMISEMI  reduce 16


state 50
	bool_expr : arith_expr LT arith_expr .  (17)
	arith_expr : arith_expr . PLUS factor_expr  (19)
	arith_expr : arith_expr . MINUS factor_expr  (20)

	PLUS  shift 30
	MINUS  shift 31
	IN  reduce 17
	OR  reduce 17
	AND  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	SEMISEMI  reduce 17


state 51
	bool_expr : arith_expr . EQ arith_expr  (16)
	bool_expr : arith_expr . LT arith_expr  (17)
	arith_expr : arith_expr . PLUS factor_expr  (19)
	arith_expr : arith_expr . MINUS factor_expr  (20)

	PLUS  shift 30
	MINUS  shift 31
	EQ  shift 32
	LT  shift 33
	.  error


state 52
	or_bool_expr : or_bool_expr OR and_bool_expr .  (12)
	and_bool_expr : and_bool_expr . AND bool_expr  (14)

	AND  shift 35
	IN  reduce 12
	OR  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	SEMISEMI  reduce 12


state 53
	and_bool_expr : and_bool_expr AND bool_expr .  (14)

	.  reduce 14


state 54
	factor_expr : factor_expr TIMES app_expr .  (22)
	app_expr : app_expr . atomic_expr  (25)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	IN  reduce 22
	PLUS  reduce 22
	TIMES  reduce 22
	MINUS  reduce 22
	DIV  reduce 22
	EQ  reduce 22
	LT  reduce 22
	OR  reduce 22
	AND  reduce 22
	THEN  reduce 22
	ELSE  reduce 22
	RPAR  reduce 22
	SEMISEMI  reduce 22

	atomic_expr  goto 36


state 55
	factor_expr : factor_expr DIV app_expr .  (23)
	app_expr : app_expr . atomic_expr  (25)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	IN  reduce 23
	PLUS  reduce 23
	TIMES  reduce 23
	MINUS  reduce 23
	DIV  reduce 23
	EQ  reduce 23
	LT  reduce 23
	OR  reduce 23
	AND  reduce 23
	THEN  reduce 23
	ELSE  reduce 23
	RPAR  reduce 23
	SEMISEMI  reduce 23

	atomic_expr  goto 36


state 56
	toplevel : LET REC var var . EQ expr SEMISEMI  (3)
	expr : LET REC var var . EQ expr IN expr SEMISEMI  (6)

	EQ  shift 62
	.  error


state 57
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (5)

	IN  shift 63
	SEMISEMI  shift 64
	.  error


state 58
	expr : FUN var ARROW expr .  (7)

	.  reduce 7


state 59
	expr : LET REC var . var EQ expr IN expr SEMISEMI  (6)

	ID  shift 21
	.  error

	var  goto 65


state 60
	expr : LET var EQ . expr IN expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 66
	value_expr  goto 13
	arith_expr  goto 14
	or_bool_expr  goto 15
	and_bool_expr  goto 16
	bool_expr  goto 17
	app_expr  goto 18
	factor_expr  goto 19
	atomic_expr  goto 20


state 61
	expr : IF expr THEN expr . ELSE expr  (8)

	ELSE  shift 67
	.  error


state 62
	toplevel : LET REC var var EQ . expr SEMISEMI  (3)
	expr : LET REC var var EQ . expr IN expr SEMISEMI  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 68
	value_expr  goto 13
	arith_expr  goto 14
	or_bool_expr  goto 15
	and_bool_expr  goto 16
	bool_expr  goto 17
	app_expr  goto 18
	factor_expr  goto 19
	atomic_expr  goto 20


state 63
	expr : LET var EQ expr IN . expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 69
	value_expr  goto 13
	arith_expr  goto 14
	or_bool_expr  goto 15
	and_bool_expr  goto 16
	bool_expr  goto 17
	app_expr  goto 18
	factor_expr  goto 19
	atomic_expr  goto 20


state 64
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 65
	expr : LET REC var var . EQ expr IN expr SEMISEMI  (6)

	EQ  shift 70
	.  error


state 66
	expr : LET var EQ expr . IN expr  (5)

	IN  shift 63
	.  error


state 67
	expr : IF expr THEN expr ELSE . expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 71
	value_expr  goto 13
	arith_expr  goto 14
	or_bool_expr  goto 15
	and_bool_expr  goto 16
	bool_expr  goto 17
	app_expr  goto 18
	factor_expr  goto 19
	atomic_expr  goto 20


state 68
	toplevel : LET REC var var EQ expr . SEMISEMI  (3)
	expr : LET REC var var EQ expr . IN expr SEMISEMI  (6)

	IN  shift 72
	SEMISEMI  shift 73
	.  error


state 69
	expr : LET var EQ expr IN expr .  (5)

	.  reduce 5


state 70
	expr : LET REC var var EQ . expr IN expr SEMISEMI  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 74
	value_expr  goto 13
	arith_expr  goto 14
	or_bool_expr  goto 15
	and_bool_expr  goto 16
	bool_expr  goto 17
	app_expr  goto 18
	factor_expr  goto 19
	atomic_expr  goto 20


state 71
	expr : IF expr THEN expr ELSE expr .  (8)

	.  reduce 8


state 72
	expr : LET REC var var EQ expr IN . expr SEMISEMI  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 75
	value_expr  goto 13
	arith_expr  goto 14
	or_bool_expr  goto 15
	and_bool_expr  goto 16
	bool_expr  goto 17
	app_expr  goto 18
	factor_expr  goto 19
	atomic_expr  goto 20


state 73
	toplevel : LET REC var var EQ expr SEMISEMI .  (3)

	.  reduce 3


state 74
	expr : LET REC var var EQ expr . IN expr SEMISEMI  (6)

	IN  shift 72
	.  error


state 75
	expr : LET REC var var EQ expr IN expr . SEMISEMI  (6)

	SEMISEMI  shift 76
	.  error


state 76
	expr : LET REC var var EQ expr IN expr SEMISEMI .  (6)

	.  reduce 6


State 18 contains 5 reduce/reduce conflicts.


26 terminals, 13 nonterminals
33 grammar rules, 77 states
